<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group1">
        <item
            android:id="@+id/action_import"
            android:icon="@drawable/ic_photo_camera"
            android:title="@string/action_import" />
        <item
            android:id="@+id/action_gallery"
            android:icon="@drawable/ic_photo_library"
            android:title="@string/gallery" />
        <item
            android:id="@+id/action_slideShow"
            android:icon="@drawable/ic_slideshow"
            android:title="@string/slideshow" />
        <item
            android:id="@+id/action_tools"
            android:icon="@drawable/ic_tools"
            android:title="@string/tools" />
    </group>

    <item android:title="@string/communication">
        <menu>
            <item
                android:id="@+id/action_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
            <item
                android:id="@+id/action_send"
                android:icon="@drawable/ic_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>